2004-01-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* tasks: things to do after migrating ftp/Web sites.

2003-12-09  Erez Zadok  <ezk@cs.sunysb.edu>

	* fsinfo/fsinfo.8: fixed typo (unbalanced []) in man page.  Bug
	report from Eric S. Raymond <esr@thyrsus.com>.

2003-11-18  Erez Zadok  <ezk@cs.sunysb.edu>

	* Makefile.am (EXTRA_DIST_M4): exclude removed file
	m4/macros/struct_nfs_fh3.m4 from distro.

2003-10-24  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* libamu/xdr_func.c (xdr_am_nfs_fh3): Use AM_FHSIZE3 instead of
	FHSIZE3 (may be undefined).

2003-10-24  Ion Badulescu  <ion@guppy.limebrokerage.com>

	Compile fix for Solaris7 with LDAP:

	* include/am_defs.h: moved the ldap headers before am_nfs_prot.h
	to facilitate using ldap types in it

	* conf/nfs_prot/nfs_prot_sunos5_7.h: add a couple of ldap
	definitions that Sun left out of their headers

2003-10-24  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/nfs_prot/nfs_prot_*.h: remove all NFSv3-related
	definitions, they are now defined globally

	* libamu/xdr_func.c: unconditionally define all xdr functions
	needed for NFSv3, but with an am_ prefix to prevent namespace
	collisions

	* amd/amfs_host.c, amd/ops_nfs.c, amd/srvr_nfs.c,
	libamu/mount_fs.c: added the am_ prefix to all
	structures and functions having to do with NFSv3 to prevent
	namespace collisions

	* include/am_utils.h: moved definition of am_nfs_handle to ...

	* include/am_xdr_func.h: ... here. Also define AM_FHSIZE3,
	am_nfs_fh3, AM_NFSPROC3_LOOKUP, am_nfsstat3, am_fhandle3,
	am_mountstat3, am_mountres3_ok, am_mountres3, am_filename3,
	am_diropargs3, am_LOOKUP3args, am_LOOKUP3resok, am_LOOKUP3resfail,
	am_LOOKUP3res here; remove cross-platform compile helper macros
	AMU_LOOKUP3RES_*.

	* include/am_defs.h: include am_xdr_func.h before am_utils.h to
	provide definitions for NFS filehandles

	* amd/amd.h: removed declaration for xdr_mountres3

	* doc/am-utils.text: minor warning fix

	* BUGS: document the autoconf warnings when trying to compile