@@ -61,7 +61,6 @@ A.sparc64-unknown-linux-gnu-rh5.2
 Makefile.in
 OLD
 ORIG
-amd-dev.txt
 configure
 diffs.txt
 reply-to
