@@ -1,0 +1,137 @@
+<HTML>
+<HEAD>
+   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+   <META NAME="Author" CONTENT="Erez Zadok">
+   <TITLE>Am-Utils 6.x Mirror Sites</TITLE>
+</HEAD>
+<BODY BGCOLOR="#FFFFFF">
+
+<CENTER>
+<H1> Am-Utils 6.x Software Mirror Sites</H1></CENTER>
+
+Note: in case of any problems accessing the individual FTP sites, please
+contact their respective maintainers.  If you wish to be added to the
+official mirror list, please send mail to <A
+HREF="mailto:am-utils-developers@am-utils.org">am-utils-developers@am-utils.org</A> with the
+full URL, maintainer's email, and geographical location.
+
+<P>
+
+<H2>North America</H2>
+<UL>
+
+<LI> New York (Stony Brook, Primary Site)
+ <UL>
+ <LI> FTP: <A
+ HREF="ftp://ftp.am-utils.org/pub/am-utils">ftp.am-utils.org</A>.
+ Contact person in case of problems <A
+ HREF="mailto:am-utils-developers@am-utils.org">am-utils-developers@am-utils.org</A>.
+ </LI>
+ </UL>
+
+<LI> Minnesota
+ <UL>
+ <LI> FTP: <A
+ HREF="ftp://ftp.cs.umn.edu/pub/am-utils">ftp.cs.umn.edu</A>.
+ Maintainer <A HREF="mailto:dokas@cs.umn.edu">dokas@cs.umn.edu</A>.
+ </LI>
+ </UL>
+
+<LI> Virginia (Newport News)
+ <UL>
+ <LI> FTP: <A
+ HREF="ftp://ftp.ferginc.com/pub/unix/am-utils">ftp.ferginc.com</A>.
+ <FONT color=red>Avoid for now: empty directory.</FONT>
+ Maintainer <A
+ HREF="mailto:Branson.Matheson@FergInc.com">Branson.Matheson@FergInc.com</A>.
+ </LI>
+ </UL>
+
+<LI> Ohio (Kent State University)
+ <UL>
+ <LI> FTP: <A HREF="ftp://info.mcs.kent.edu/pub/am-utils">info.mcs.kent.edu</A>.
+  Maintainer <A HREF="mailto:root@mcs.kent.edu">root@mcs.kent.edu</A>.
+ </LI>
+ </UL>
+
+<LI> Florida (University of Florida)
+ <UL>
+ <LI> FTP: <A HREF="ftp://ftp.cise.ufl.edu/pub/mirrors/am-utils">ftp.cise.ufl.edu</A>.
+  Maintainer <A HREF="mailto:mirror@cise.ufl.edu">mirror@cise.ufl.edu</A>.
+ </LI>
+ </UL>
+
+</UL>
+
+<H2>Europe</H2>
+<UL>
+
+<LI> Germany
+ <UL>
+ <LI> FTP: <A HREF="ftp://ftp.fu-berlin.de/pub/unix/network/am-utils">ftp.fu-berlin.de</A>.
+  Maintainer <A HREF="mailto:ftp-adm@ftp.fu-berlin.de">ftp-adm@ftp.fu-berlin.de</A>.
+ </LI>
+ <LI> FTP: <A HREF="ftp://ftp.tu-darmstadt.de/pub/networking/filesystems/am-utils/">ftp.tu-darmstadt.de</A>.
+  Maintainer <A HREF="mailto:networking@ftp.tu-darmstadt.de">networking@ftp.tu-darmstadt.de</A>.
+ </LI>
+ </UL>
+
+<LI> Sweden
+ <UL>
+ <LI> FTP: <A HREF="ftp://ftp.sunet.se/pub/unix/admin/am-utils">ftp.sunet.se</A>.
+ Maintainer <A HREF="mailto:archive@ftp.sunet.se">archive@ftp.sunet.se</A>.
+ </LI>
+ <LI> FTP: <A HREF="ftp://mirror.matematik.su.se/pub/am-utils">ftp.matematik.su.se</A>.
+ Maintainer <A HREF="mailto:leifj@matematik.su.se">leifj@matematik.su.se</A>.
+ </LI>
+ </UL>
+
+<LI> UK
+ <UL>
+ <LI> FTP: <A HREF="ftp://sunsite.org.uk/packages/am-utils">sunsite.org.uk</A>.
+ Maintainer <A HREF="mailto:lmjm@icparc.ic.ac.uk">lmjm@icparc.ic.ac.uk</A>.
+ </LI>
+ </UL>
+
+</UL>
+
+<H2>Asia</H2>
+<UL>
+
+<LI> Japan
+ <UL>
+ <LI> FTP: <A HREF="ftp://ftp.u-aizu.ac.jp/pub/net/amd/am-utils">ftp.u-aizu.ac.jp</A>.
+  Maintainer <A HREF="mailto:ftp-admin@u-aizu.ac.jp">ftp-admin@u-aizu.ac.jp</A>.
+ </LI>
+
+ <LI> FTP: <A HREF="ftp://core.ring.gr.jp/pub/net/am-utils/">core.ring.gr.jp</A>.
+  Maintainer <A HREF="mailto:ftpadmin@ring.gr.jp">ftpadmin@ring.gr.jp</A>.
+ </LI>
+
+ <LI> FTP: <A HREF="ftp://ftp.ring.gr.jp/pub/net/am-utils/">ftp.ring.gr.jp</A>.
+  Maintainer <A HREF="mailto:ftpadmin@ring.gr.jp">ftpadmin@ring.gr.jp</A>.
+ </LI>
+ </UL>
+</UL>
+
+<H2>Australia</H2>
+<UL>
+
+<LI> Melbourne
+ <UL>
+ <LI> FTP: <A HREF="ftp://ftp.sage-au.org.au/pub/network/filesystem/am-utils">ftp.sage-au.org.au</A>.
+  Maintainer <A HREF="mailto:mirror@ftp.sage-au.org.au">mirror@ftp.sage-au.org.au</A>.
+ </LI>
+ </UL>
+</UL>
+
+<HR>
+<I> Last updated: Fri Jan  2 14:16:56 EST 2004</I>
+
+</BODY>
+</HTML>
+
+<!---
+ <LI> FTP: <A HREF="X">X</A>.
+ Maintainer <A HREF="mailto:X">X</A>.
+-->
