@@ -1,0 +1,57 @@
+			  AM-UTILS-6.x MIRRORS
+
+Note: in case of any problems accessing the individual FTP sites, please
+contact their respective maintainers.  If you wish to be added to the
+official mirror list, please send mail to am-utils-developers@am-utils.org with the
+full URL, maintainer's email, and geographical location.
+
+U.S.A:
+	New York (Stony Brook, Primary Site):
+		ftp://ftp.am-utils.org/pub/am-utils
+		Maintainer: ezk@am-utils.org
+	Minnesota:
+		ftp://ftp.cs.umn.edu/pub/am-utils
+		Maintainer: dokas@cs.umn.edu
+	Virginia (Newport News):
+		ftp://ftp.ferginc.com/pub/unix/am-utils
+		Maintainer: Branson.Matheson@FergInc.com
+		Avoid for now: empty directory
+	Ohio (Kent State University):
+		ftp://info.mcs.kent.edu/pub/am-utils
+		Maintainer: root@mcs.kent.edu
+	Florida (University of Florida)
+		ftp://ftp.cise.ufl.edu/pub/mirrors/am-utils
+		Maintainer: mirror@cise.ufl.edu
+
+Europe:
+	Germany:
+		ftp://ftp.fu-berlin.de/pub/unix/network/am-utils
+		Maintainer: ftp-adm@ftp.fu-berlin.de
+	Germany:
+		ftp://ftp.tu-darmstadt.de/pub/networking/filesystems/am-utils/
+		Maintainer: networking@ftp.tu-darmstadt.de
+	Sweden:
+		ftp://ftp.sunet.se/pub/unix/admin/am-utils
+		Maintainer: archive@ftp.sunet.se
+	Sweden (Stockholm University, Math Depat):
+		ftp://mirror.matematik.su.se/pub/am-utils
+		Maintainer: leifj@matematik.su.se
+	UK:
+		ftp://sunsite.org.uk/packages/am-utils
+		Maintainer: lmjm@icparc.ic.ac.uk
+
+Asia:
+	Japan:
+		ftp://ftp.u-aizu.ac.jp/pub/net/amd/am-utils
+		Maintainer: ftp-admin@u-aizu.ac.jp
+	Japan:
+		ftp://core.ring.gr.jp/pub/net/am-utils/
+		Maintainer: ftpadmin@ring.gr.jp
+	Japan:
+		ftp://ftp.ring.gr.jp/pub/net/am-utils/
+		Maintainer: ftpadmin@ring.gr.jp
+
+Australia:
+	Melbourne:
+		ftp://ftp.sage-au.org.au/pub/network/filesystem/am-utils
+		Maintainer: mirror@ftp.sage-au.org.au
