@@ -1,6 +1,6 @@
 dnl configure.in file for am-utils-6.x
 dnl Contains general GNU-autoconf macros.
-dnl Author: Erez Zadok <ezk@cs.columbia.edu>
+dnl Author: Erez Zadok <ezk@cs.sunysb.edu>
 dnl
 dnl ######################################################################
 dnl UNCOMMENT THE NEXT FEW LINES FOR DEBUGGING CONFIGURE
@@ -12,7 +12,7 @@ dnl ######################################################################
 dnl INITIALIZATION
 dnl AC_INIT
 dnl new init style: PACKAGE, VERSION, BUG-REPORTING-ADDRESS
-AC_INIT([am-utils],[6.1b5pre],[amd-dev@am-utils.org])
+AC_INIT([am-utils],[6.1b5pre],[am-utils@am-utils.org])
 AC_MSG_NOTICE(*** INITIALIZATION ***)
 AC_CONFIG_SRCDIR([amd/amd.c])
 AM_CONFIG_HEADER(config.h)
@@ -53,7 +53,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(m4)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.67 $)
+AC_REVISION($Revision: 1.68 $)
 AC_COPYRIGHT([Copyright (c) 1997-2003 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -612,7 +612,7 @@ AC_MSG_ERROR(
 [Cannot find any definition for struct nfs_args!
 This can be due to a misconfigured system, one for which am-utils
 was not ported to yet, or a bug in the am-utils sources.  Check
-config.log for details and report them to amd-dev please.])
+config.log for details and report them to am-utils@am-utils.org please.])
 fi
 dnl -----------------------------------------------------------------------
 AMU_STRUCT_FIELD_NFS_FH
@@ -1097,7 +1097,7 @@ AC_MSG_ERROR(
 and this system stores its mount tables on files (not in kernel).
 This can be due to a misconfigured system, one for which am-utils
 was not ported to yet, or a bug in the am-utils sources.  Check
-config.log for details and report them to amd-dev please.])
+config.log for details and report them to am-utils@am-utils.org please.])
 fi
 dnl -----------------------------------------------------------------------
 AMU_CHECK_MNTTAB_FILE_NAME
