@@ -36,48 +36,54 @@ ps: am-utils.dvi am-utils.ps
 am-utils-clean: clean maintainer-clean-aminfo maintainer-clean-vti
 
 # personal rule for Erez Zadok to generate and install html docs
-alldocs: ps install-NEWS install-INSTALL install-ChangeLog install-AUTHORS install-tasks install-autofs install-y2k install-BUGS install-html install-ps
+alldocs: ps install-NEWS install-INSTALL install-ChangeLog install-AUTHORS install-tasks install-autofs install-y2k install-BUGS install-html install-ps install-MIRRORS
 
-install-html: $(HOME)/html/am-utils/am-utils-all.html
-$(HOME)/html/am-utils/am-utils-all.html: am-utils.texi
+AMU_HTML_TOP=$(HOME)/proj/www/docs/am-utils
+install-html: $(AMU_HTML_TOP)/am-utils-all.html
+$(AMU_HTML_TOP)/am-utils-all.html: am-utils.texi
 	texi2html -Verbose -expand info -number -out_file am-utils-all.html $<
 	texi2html -frames -Verbose -expand info -number -split chapter $<
-	mv *.html $(HOME)/html/am-utils
-	chmod -R a+r $(HOME)/html/am-utils
+	mv *.html $(AMU_HTML_TOP)
+	chmod -R a+r $(AMU_HTML_TOP)
 
-install-ps: $(HOME)/html/am-utils/am-utils.ps
-$(HOME)/html/am-utils/am-utils.ps: am-utils.ps
-	install -c -m 644 $< $@
-	(cd $(HOME)/html/research && ${MAKE} ${MFLAGS})
-
-install-NEWS: $(HOME)/html/am-utils/NEWS.txt
-$(HOME)/html/am-utils/NEWS.txt: $(top_srcdir)/NEWS
+install-ps: $(AMU_HTML_TOP)/am-utils.ps
+$(AMU_HTML_TOP)/am-utils.ps: am-utils.ps
 	install -c -m 644 $< $@
 
-install-INSTALL: $(HOME)/html/am-utils/INSTALL.txt
-$(HOME)/html/am-utils/INSTALL.txt: $(top_srcdir)/INSTALL
+install-NEWS: $(AMU_HTML_TOP)/NEWS.txt
+$(AMU_HTML_TOP)/NEWS.txt: $(top_srcdir)/NEWS
 	install -c -m 644 $< $@
 
-install-ChangeLog: $(HOME)/html/am-utils/ChangeLog.txt
-$(HOME)/html/am-utils/ChangeLog.txt: $(top_srcdir)/ChangeLog
+install-INSTALL: $(AMU_HTML_TOP)/INSTALL.txt
+$(AMU_HTML_TOP)/INSTALL.txt: $(top_srcdir)/INSTALL
 	install -c -m 644 $< $@
 
-install-AUTHORS: $(HOME)/html/am-utils/AUTHORS.txt
-$(HOME)/html/am-utils/AUTHORS.txt: $(top_srcdir)/AUTHORS
+install-ChangeLog: $(AMU_HTML_TOP)/ChangeLog.txt
+$(AMU_HTML_TOP)/ChangeLog.txt: $(top_srcdir)/ChangeLog
 	install -c -m 644 $< $@
 
-install-tasks: $(HOME)/html/am-utils/tasks.txt
-$(HOME)/html/am-utils/tasks.txt: $(top_srcdir)/tasks
+install-AUTHORS: $(AMU_HTML_TOP)/AUTHORS.txt
+$(AMU_HTML_TOP)/AUTHORS.txt: $(top_srcdir)/AUTHORS
 	install -c -m 644 $< $@
 
-install-autofs: $(HOME)/html/am-utils/autofs.txt
-$(HOME)/html/am-utils/autofs.txt: $(top_srcdir)/README.autofs
+install-tasks: $(AMU_HTML_TOP)/tasks.txt
+$(AMU_HTML_TOP)/tasks.txt: $(top_srcdir)/tasks
 	install -c -m 644 $< $@
 
-install-y2k: $(HOME)/html/am-utils/y2k.txt
-$(HOME)/html/am-utils/y2k.txt: $(top_srcdir)/README.y2k
+install-autofs: $(AMU_HTML_TOP)/autofs.txt
+$(AMU_HTML_TOP)/autofs.txt: $(top_srcdir)/README.autofs
 	install -c -m 644 $< $@
 
-install-BUGS: $(HOME)/html/am-utils/BUGS.txt
-$(HOME)/html/am-utils/BUGS.txt: $(top_srcdir)/BUGS
+install-y2k: $(AMU_HTML_TOP)/y2k.txt
+$(AMU_HTML_TOP)/y2k.txt: $(top_srcdir)/README.y2k
+	install -c -m 644 $< $@
+
+install-BUGS: $(AMU_HTML_TOP)/BUGS.txt
+$(AMU_HTML_TOP)/BUGS.txt: $(top_srcdir)/BUGS
+	install -c -m 644 $< $@
+
+install-MIRRORS: $(AMU_HTML_TOP)/MIRRORS.txt $(AMU_HTML_TOP)/MIRRORS.html
+$(AMU_HTML_TOP)/MIRRORS.txt: $(top_srcdir)/MIRRORS.txt
+	install -c -m 644 $< $@
+$(AMU_HTML_TOP)/MIRRORS.html: $(top_srcdir)/MIRRORS.html
 	install -c -m 644 $< $@
